# abixio-ui

./: .gitignore  Cargo.toml  README.md  todo.md
.claude/: project_state.md  settings.local.json
.github/workflows/: ci.yml
bench-results/: 1776076749.json  1776077316.json  1776090103.json  1776092466.json  l1-http-ingress.json  l2-s3proto-isolated.json  l2-s3proto.json  l3-storage-file.json  l3-storage-log.json  l3-storage.json  l4-compute.json  l5-disk.json  l6-s3storage.json
docs/: architecture.md  authority.md  credentials.md  features.md  iced-standards.md  performance.md  s3-client-audit.md  s3-features.md  s3.md  sync.md  testing.md  todo.md
src/: app.rs  async_op.rs  config.rs  connection.rs  credential.rs  keychain.rs  lib.rs  main.rs  perf.rs  server.rs
src/abixio/: client.rs  types.rs
src/app/: mod.rs  sync_ops.rs  transfer_ops.rs  types.rs
src/app/handlers/: admin.rs  browse.rs  connection.rs  delete.rs  detail.rs  mod.rs  server.rs  sync.rs  testing.rs  transfer.rs
src/bench/: clients.rs  l1_disk.rs  l1_http.rs  l2_compute.rs  l2_s3proto.rs  l3_pool_internals.rs  l3_storage.rs  l4_compute.rs  l4_http.rs  l5_disk.rs  l5_s3proto.rs  l6_s3storage.rs  l6_stack_breakdown.rs  l7_e2e.rs  mod.rs  servers.rs  stats.rs  tls.rs
src/s3/: client.rs  lifecycle_xml.rs  mod.rs  xml.rs
src/views/: buckets.rs  cluster.rs  connections.rs  detail.rs  disks.rs  healing.rs  mod.rs  objects.rs  server.rs  settings.rs  sidebar.rs  sync.rs  testing.rs  transfer.rs
tests/: bench.rs  cpu_idle.rs  idle_guard.rs  integration.rs  perf_behavior.rs
tests/support/: mod.rs  server.rs
