[package]
name = "abixio-ui"
version = "0.2.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "fs"] }
rust-s3 = { version = "0.37", default-features = false, features = ["tokio-rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.17"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
keyring = "3"
dirs = "6"

[dev-dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Threading", "Win32_Foundation"] }
