[package]
name = "abixio-ui"
version = "0.2.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "fs"] }
aws-sdk-s3 = "1"
aws-config = "1"
aws-credential-types = "1"
aws-smithy-types = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
time = { version = "0.3", features = ["formatting", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.38", features = ["serialize"] }
rfd = "0.17"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
keyring = "3"
dirs = "6"
walkdir = "2"
mime_guess = "2"

[dev-dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Threading", "Win32_Foundation"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
